# stationaryorbit

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  stationaryorbit.code-workspace  stationaryorbit.srctrlprj
architect/: Graphics.uxf  architect note.md  stationaryorbit.uxf
doc/ja_JP/: index.md
doc/ja_JP/headers/: index.md
doc/ja_JP/requirements/: bitsequencetype.md  equatable.md  index.md  valuetype.md
include/ArtifiacalIntelligence/Interface/: IFuzzySet.hpp
include/ArtifiacalIntelligence/Logic/: LinerFuzzySet.hpp
include/DataClass/: Byte.hpp  Rotation.hpp  RotationUnit.hpp  Vector2d.hpp
include/DataClass/Graphics/: ImageInfomation.hpp  Point.hpp  PointF.hpp  Rectangle.hpp  RectangleF.hpp
include/EnumClass/: DefaultDirection2d.hpp  RotationUnit.hpp
include/EnumClass/Graphics/: ImageFormat.hpp
include/General/: Delegate  Exception  General  Memory  Rotation  Vector2d
include/General/Interface/: IComparable.hpp  IElementSet.hpp
include/General/Logic/: BitReference.hpp  Delegate.hpp  InvalidOperationException.hpp  NullReferenceException.hpp
include/General/Structure/: Byte.hpp  FractionalDec.hpp  Range.hpp  Real.hpp  Rotation.hpp  TristateBoolean.hpp  Vector2d.hpp
include/Graphics/: BMPImage  Bitmap  Color  General
include/Graphics/Enumration/: ColorDepth.hpp  ColorSystem.hpp
include/Graphics/Interface/: IBitmapBuffer.hpp  ICanvasBuffer.hpp  IImageInfomation.hpp
include/Graphics/Logic/: BMPImage.hpp  BMPImageBitmap.hpp  BMPImageInfomation.hpp  Bitmap.hpp  BitmapBuffer.hpp  BitmapByteBuffer.hpp  BitmapFrame.hpp  BitmapPixelGetter.hpp  BitmapPixelReference.hpp  BitmapPixelSetter.hpp  BitmapSimpleConvert.hpp  (+7 more)
include/Interface/: IBooleanSet.hpp  IComparable.hpp  ICompareble.hpp  IElementSet.hpp  IRotation.hpp  IVector2d.hpp
include/LogicClass/: BitAccess.hpp  BitReference.hpp  InvalidOperationException.hpp  MemoryPool.hpp
include/NumericAnalysis/: Mathmatic
include/stationaryorbit/: core.bitoperation.hpp  core.delegate.hpp  core.event.hpp  core.iteration.hpp  core.numeral.hpp  core.property.hpp  exception.hpp  graphics-core.bitmap.hpp  graphics-core.color.hpp  graphics-core.colorspace.hpp  graphics-core.image.hpp  graphics-core.pixmap.hpp  graphics-dib.bmpimage.hpp  graphics-dib.structures.hpp  mathematics.algorithm.hpp  mathematics.fuzzy.hpp  mathematics.primitives.hpp  mathematics.set.hpp
src/: CMakeLists.txt
src/General/: BitAccess.cpp  BitReference.cpp  Byte.cpp  CMakeLists.txt  FractionalDec.cpp  InvalidOperationException.cpp  MemoryPool.cpp  NullReferenceException.cpp  QuantumBit.cpp  Real.cpp  Rotation.cpp  Vector2d.cpp
src/Graphics/: BMPImage.cpp  BMPImageInfomation.cpp  Bitmap.cpp  BitmapBuffer.cpp  BitmapByteBuffer.cpp  BitmapFrame.cpp  BitmapPixelGetter.cpp  BitmapPixelReference.cpp  BitmapPixelSetter.cpp  BitmapSimpleConvert.cpp  CMakeLists.txt  Canvas.cpp  CanvasBuffer.cpp  Color.cpp  Graphics.cpp  ImageInfomation.cpp  Point.cpp  PointF.cpp  RGBColor.cpp  Rectangle.cpp  RectangleF.cpp  RelativeColor.cpp  YCrCbColor.cpp
src/Graphics/BMP/: BMPImage.cpp  BMPImageBitmap.cpp  BMPImageInfomation.cpp  BMPImage_RGB24.cpp  CoreHeader.cpp  FileHeader.cpp  InvalidFormatException.cpp  RGB24BMP.cpp
src/NumericAnalysis/: CMakeLists.txt  Differencial.cpp  MidpointIntegral.cpp  NewtonCoef.cpp  PolynomialFunction.cpp  TaylorSeries.cpp  TrapeziumIntegral.cpp
src/ai/: linearfuzzyset.cpp
src/analysis/: CMakeLists.txt  compensatedfloat.cpp  differencial.cpp  fuzzybool.cpp  linearfuzzyset.cpp  midpointintegral.cpp  simpsonintegral.cpp  trapeziumintegral.cpp
src/core/: CMakeLists.txt  algorithms.cpp  arithmetic.cpp  bitreference.cpp  fixedpoint.cpp  fractionaldec.cpp  integer.cpp  invalidoperation.cpp  nullreference.cpp  point.cpp  proportion.cpp  quantumbit.cpp  real.cpp  rectanglesize.cpp  rotation.cpp  traits.cpp  tristateboolean.cpp  vector2d.cpp
src/exception/: CMakeLists.txt  invalidoperation.cpp  nullreference.cpp
src/graphics-core/: CMakeLists.txt  binarybitmap.cpp  bitmap.cpp  bitmapbuffer.cpp  bitmapbytebuffer.cpp  bitmappixelgetter.cpp  bitmappixelreference.cpp  bitmappixelsetter.cpp  bitmapsimpleconvert.cpp  channelvalue.cpp  cmycolor.cpp  cmykcolor.cpp  color.cpp  colorblending.cpp  colorconvert.cpp  colorspace.cpp  deformation.cpp  fundamental.cpp  graphicscore.cpp  grayscalecolor.cpp  imageinfomation.cpp  interpolation.cpp  pixelreference.cpp  pixmap.cpp  point.cpp  pointf.cpp  rectangle.cpp  rectanglef.cpp  rgbcolor.cpp  ycrcbcolor.cpp
src/graphics-dib/: CMakeLists.txt  dibbitmap.cpp  dibcolorspace.cpp  dibcorebitmap.cpp  dibheaders.cpp  dibinfobitmap.cpp  dibloader.cpp  dibpixeldata.cpp  fileheader.cpp  invaliddibformat.cpp  rgbdecoder.cpp
src/graphics-wbmp/: CMakeLists.txt  bmpimage.cpp  bmpimagebitmap.cpp  bmpimageinfomation.cpp  coreheader.cpp  dibbitmap.cpp  fileheader.cpp  infoheader.cpp  invaliddibformat.cpp  invalidformatexception.cpp  invalidwbmpformatexception.cpp  rgb24bmp.cpp  wbmpbuffer.cpp  wbmploader.cpp  wbmpsaver.cpp
src/mathematics/: CMakeLists.txt  differencial.cpp  fuzzybool.cpp  integral.cpp  midpointintegral.cpp  newtoncoef.cpp  polynomialfunction.cpp  simpsonintegral.cpp  taylorseries.cpp  trapeziumintegral.cpp
test/: CMakeLists.txt
test/General/: Byte.cpp  CMakeLists.txt  FractionalDec.cpp  Rotation.cpp  Vector2d.cpp  test-general.cpp
test/Graphics/: BMP.cpp  CMakeLists.txt  graphics-test.cpp
test/NumericAnalysis/: CMakeLists.txt  CompensatedFloat.cpp  Differencial.cpp  NewtonCoef.cpp  PolynomialFunction.cpp  TaylorSeries.cpp  test-numericanalysis.cpp
test/analysis/: CMakeLists.txt  NewtonCoef.cpp  newtoncoef.cpp  polynomialfunction.cpp
test/core/: CMakeLists.txt  bitoperation.cpp  delegate.cpp  fractionaldec.cpp  iteration.cpp  numeral.cpp  property.cpp  range.cpp  rotation.cpp  test-general.cpp  traits.cpp  utilities.cpp  vector2d.cpp
test/graphics/: BMP.cpp  CMakeLists.txt  core.cpp  dib.cpp  graphics-test.cpp  wbmp.cpp
test/mathematics/: CMakeLists.txt  compensatedfloat.cpp  differencial.cpp  newtoncoef.cpp  polynomialfunction.cpp  taylorseries.cpp
(+242 files in other folders)
